# food_ordering

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  entrypoint.sh  heroku.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b357457c2a7_initial_migration.py  d81c7a65f440_initial_migration.py
env/: .db.example.env  .example.env
src/foodie/: config.py  dataclasses.py  enums.py  main.py  util.py
src/foodie/api/: deps.py  exceptions.py  router.py  schema.py
src/foodie/api/auth/: __init__.py  admin_router.py  courier_admin_router.py  courier_router.py  router.py  vendor_admin_router.py  vendor_router.py
src/foodie/api/courier/: __init__.py  admin_router.py  schema.py
src/foodie/api/invite/: __init__.py  admin_router.py  courier_admin_router.py  router.py  schema.py  vendor_admin_router.py
src/foodie/db/: base.py  mixins.py  models.py  util.py
tests/: conftest.py  test_auth.py  test_foodie.py  test_invite.py  test_partner_create.py  test_vendor_admin_vendors_router.py  test_vendors.py
